[project]
name = "fastapi-async-storages"
version = "0.1.3"
description = "A powerful, extensible, and async-ready cloud object storage backend for FastAPI."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "stabldev", email = "thestabldev@gmail.com" }]
requires-python = ">=3.12"
dependencies = []
keywords = [
  "fastapi",
  "async",
  "storage",
  "cloud",
  "s3",
  "object-storage",
  "backend"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/stabldev/fastapi-async-storages"
Repository = "https://github.com/stabldev/fastapi-async-storages"
Documentation = "https://fastapi-async-storages.readthedocs.io"
Changelog = "https://github.com/stabldev/fastapi-async-storages/releases"

[project.optional-dependencies]
s3 = ["aioboto3>=15.4.0"]
docs = [
    "aioboto3>=15.4.0",
    "furo>=2025.9.25",
    "pillow>=12.0.0",
    "sphinx>=8.2.3",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pillow>=12.0.0",
    "pytest>=8.4.2",
    "pytest-aioboto3>=0.6.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "sqlalchemy>=2.0.44",
]

[tool.uv.build-backend]
module-root = "src"
module-name = "async_storages"

[tool.pyright]
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnusedCallResult = "none"
reportUnknownVariableType = "none"
reportAny = "none"
reportExplicitAny = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.8.20,<0.10.0"]
build-backend = "uv_build"
